<resources>
    <string name="app_name">AlgoLizer</string>

    <string name="choose_starting">Choose the starting point</string>
    <string name="choose_destination">Choose the destination point</string>
    <string name="no_path_found">No path from source to destination found</string>
    <string name="solution_found">Solution found with cost: %1$d</string>
    <string name="place_blocks_hint">Place blocks on the grid</string>
    <string name="interactive_mode">Interactive Mode</string>
    <string name="algorithm">Algorithm</string>
    <string name="reset">Reset</string>

    <array name="shortest_path_algorithms">
        <item>Dijkstra</item>
        <item>A*</item>
        <item>Greedy best-first search</item>
        <item>BFS</item>
    </array>

    <string-array name="mst_algorithms">
        <item>Kruskal</item>
        <item>Prim</item>
    </string-array>

    <string-array name="traversal_algorithms">
        <item>BFS</item>
        <item>DFS</item>
    </string-array>

    <string name="shortest_path_algorithms">Shortest path algorithms</string>
    <string name="other_graph_algorithms">Other graph algorithms (Coming)</string>
    <string name="sorting_algorithms">Sorting algorithms (Coming)</string>
    <string name="info">Info</string>
    <string name="algolizer">Algolizer</string>


    <string name="the_source_code_of_the_app_is_available_on_github">The source code of the app is available on Github</string>
    <string name="github_repository">GitHub Repository</string>
    <string name="follow_me">Follow me</string>
    <string name="developed_by_label">Developed by: Mohammed Al-Ali</string>
    <string name="minimum_cost_spanning_tree">Minimum Cost Spanning Tree</string>
    <string name="graph_traversal_algorithms">Graph Traversal Algorithms</string>

    <string name="mst_found">Minimum cost spanning tree found with cost: %1$d</string>
    <string name="no_mst">The graph is not connected and cannot have MST!</string>
    <string name="invalid_graph">The graph is invalid</string>
    <string name="graph_has_been_traversed">Graph has been traversed!</string>

</resources>
